tests/typecheck/should_compile/Tc245_A.hs
{-# LANGUAGE TypeFamilies #-}
module Tc245_A where

import Data.Kind (Type)

class Foo a where
    data Bar a :: Type -> Type
