tests/typecheck/should_fail/T24090b.hs
{-# LANGUAGE TypeAbstractions #-}
{-# LANGUAGE TypeFamilies #-}

module T24090b where

import GHC.Exts (Any)

type Foo = Any :: a
